--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -38,8 +38,8 @@ jobs:
 
     - name: Commit and Push Changes
       run: |
-        git config --global user.email "actions@github.com"
-        git config --global user.name "GitHub Actions"
-        git add documents/log.md
+        git config --global user.email "rashishetty25@gmail.com"
+        git config --global user.name "rashishetty25"
+        git add documents/my-docusaurus-project/docs/log.md
         git commit -m "Update documentation log [skip ci]"
-        git push
+        git push origin main
