--- a/.dependabot/dependabot.yml
+++ b/.dependabot/dependabot.yml
@@ -16,10 +16,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci  # Use 'npm ci' for a clean and reproducible installation
 
       - name: Run Dependabot
-        uses: dependabot/dependabot-core@main  # Use 'main' branch reference
+        uses: dependabot/dependabot-core@main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           command: "npm update"
