--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -10,48 +10,51 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20'
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-    - name: Install Dependencies
-      run: |
-        cd my-docusaurus-project
-        npm install
+      - name: Install Dependencies
+        run: |
+          cd my-docusaurus-project
+          npm install
 
-    - name: Generate Documentation
-      id: generate-docs
-      run: |
-        cd my-docusaurus-project
-        npx docusaurus build
-      continue-on-error: true
+      - name: Generate Documentation
+        id: generate-docs
+        run: |
+          cd my-docusaurus-project
+          npx docusaurus build
+        continue-on-error: true
 
-    - name: Update Log Document
-      run: |
-      echo -e "### $(TZ='Asia/Kolkata' date)\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Commit: $GITHUB_SHA\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Message: $(git log --format=%B -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Author: $(git log --format=%an -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Author Email: $(git log --format=%ae -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Branch: $GITHUB_REF\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Repository: ${{ github.repository }}\n" >> my-docusaurus-project/docs/log.md
-      echo -e "Workflow Run ID: ${{ github.run_id }}\n" >> my-docusaurus-project/docs/log.md
-      if [ ${{ steps.generate-docs.outcome }} == "success" ]; then
-        echo -e "Status: Documentation generation successful\n" >> my-docusaurus-project/docs/log.md
-        echo -e "URL: [View Actions](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})\n" >> my-docusaurus-project/docs/log.md
-      else
-        echo -e "Status: Documentation generation failed\n" >> my-docusaurus-project/docs/log.md
-        echo -e "Failure by: ${{ github.actor }}\n" >> my-docusaurus-project/docs/log.md
-      fi
+      - name: Update Log Document
+        run: |
+          echo "### $(TZ='Asia/Kolkata' date)" >> my-docusaurus-project/docs/log.md
+          # Add any information you want to log (e.g., branch name, commit details)
+          echo -e "Commit: $GITHUB_SHA\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Message: $(git log --format=%B -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Author: $(git log --format=%an -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Author Email: $(git log --format=%ae -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Committer: $(git log --format=%cn -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Committer Email: $(git log --format=%ce -n 1 $GITHUB_SHA)\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Branch: $GITHUB_REF\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Repository: ${{ github.repository }}\n" >> my-docusaurus-project/docs/log.md
+          echo -e "Workflow Run ID: ${{ github.run_id }}\n" >> my-docusaurus-project/docs/log.md
+          if [ ${{ steps.generate-docs.outcome }} == "success" ]; then
+            echo -e "Status: Documentation generation successful\n" >> my-docusaurus-project/docs/log.md
+            echo -e "URL: [View Actions](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})\n" >> my-docusaurus-project/docs/log.md
+          else
+            echo -e "Status: Documentation generation failed\n" >> my-docusaurus-project/docs/log.md
+            echo -e "Failure by: ${{ github.actor }}\n" >> my-docusaurus-project/docs/log.md
+          fi
 
-    - name: Commit and Push Changes
-      run: |
-        git config --global user.email "rashishetty25@gmail.com"
-        git config --global user.name "rashishetty25"
-        git add my-docusaurus-project/docs/log.md
-        git commit -m "Update documentation log [skip ci]"
-        git push origin main
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.email "rashishetty25@gmail.com"
+          git config --global user.name "rashishetty25"
+          git add my-docusaurus-project/docs/log.md
+          git commit -m "Update documentation log [skip ci]"
+          git push origin main
